# .cmakefiles

./: Apps.cmake  CMakeApp.cmake  CMakeLib.cmake  CMakeModule.cmake  CMakeTest.cmake  Functions.cmake  Libs.cmake  Message.cmake  Testing.cmake  list_dir.sh  repoaddresser.sh  repohelper.sh
CMakeTextFiles/: CMakeLists-RepoRoot.txt  CMakeLists-app-unit.txt  CMakeLists-app.txt  CMakeLists-module-top.txt  CMakeLists-module-unit.txt  CMakeLists-module.txt  CMakeLists-test.txt
Repo/: App  CMakeLists-app.txt  CMakeLists-module.txt  CMakeLists-test.txt  CMakeLists.txt  Module
TemplateCmakes/: CmakeLists-app.txt
example_tasks/: example_tasks.json  repohelper.sh  updateFiles.sh
proj_structure/: CMakeLists.txt
proj_structure/apps/App1/inc/App1/: Template.hpp
proj_structure/apps/App1/inc/Template/: Template.hpp
proj_structure/libs/: CMakeLists.txt
proj_structure/libs/Lib1/: CMakeLists.txt
proj_structure/libs/Lib1/inc/Lib1/: Template.hpp
proj_structure/libs/Lib1/src/: Template.cpp
proj_structure/libs/Lib1/test/: test_lib1.cpp
repo_structure_template/: CMakeLists.txt  Makefile
repo_structure_template/apps/: CMakeLists.txt
repo_structure_template/apps/App1/: CMakeLists.txt
repo_structure_template/libs/: CMakeLists.txt
repo_structure_template/libs/Lib1/: CMakeLists.txt
repo_structure_template/libs/Lib1/test/: CMakeLists.txt
templates/: CMakeLists-app.txt  CMakeLists-module.txt  CMakeLists.txt  Makefile
templates/App/: CMakeLists.txt
templates/App/src/: main.cpp
templates/Apps/: CMakeLists.txt
templates/Apps/App1/: CMakeLists.txt
templates/Module/: CMakeLists.txt
templates/Module/test/: CMakeLists.txt
templates/Modules/: CMakeLists.txt
templates/Modules/Module1/: CMakeLists.txt
templates/Modules/Module1/test/: CMakeLists.txt
templates/apps/: CMakeLists.txt
templates/apps/App1/: CMakeLists.txt
templates/apps/App1/inc/: template.hpp
templates/apps/App1/src/: main.cpp
templates/libs/: CMakeLists.txt
templates/libs/Lib1/: CMakeLists.txt
templates/libs/Lib1/inc/Lib1/: Template.hpp
templates/libs/Lib1/test/: CMakeLists.txt  test_lib1.cpp
templates/libs/Module1/: CMakeLists.txt
templates/libs/Module1/test/: CMakeLists.txt
